@@ -1,5 +1,7 @@
 Revision history for Perl extension CGI::Header::PSGI.
 
+  - Requires CGI::Header 0.47 or higher
+
 0.10  Apr 11th, 2013
 
   - Rewrite entirely
